# leadscraper

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/raw/2026-02-18/: activities.csv  enterprises.csv  establishments.csv
data/sample/: activities.csv  enterprises.csv  establishments.csv
docs/: COUNTRY_SETUP.md  FAQ.md
examples/: config.example.env  output_sample.csv  output_sample.json
lead-radar/: .gitignore  README.md  requirements.txt
lead-radar/data/sample/: contact.csv  enterprises.csv  establishments.csv
lead-radar/scripts/: benchmark.sh
lead-radar/src/: __init__.py  cli.py  config.py  export.py  fast_pipeline.py  io_kbo.py  scoring.py  transform.py  validate.py
lead-radar/tests/: test_cli_sample.py  test_integrations.py  test_pipeline.py  test_scoring.py  test_smoke_fixture_cli_e2e.py
lead-radar/tests/fixtures/minimal_kbo/: activities.csv  address.csv  contact.csv  enterprises.csv  establishments.csv
src/: cli.py  config.py  export.py  fast_pipeline.py  integrations.py  io_kbo.py  scoring.py  transform.py  validate.py
src/providers/: __init__.py  template.py
tests/: test_cli_sample.py  test_integrations.py  test_smoke_fixture_cli_e2e.py  test_transform.py
tests/fixtures/minimal_kbo/: address.csv  enterprises.csv  establishments.csv
